--- a/index.html
+++ b/index.html
@@ -10,6 +10,90 @@
 
 <body>
   <h1>Pizza Parlor</h1>
+  <h2>Pizza Order Form</h2>
+  <div id="orderInfo">
+    <form id="userInfo">
+      <label for="name">Name:</label>
+      <input id="name" type="text">
+      <label for="address">Address:</label>
+      <input id="address" type="text">
+      <label for="phoneNum">Phone Number:</label>
+      <input id="phoneNum" type="text">
+      <label for="deliveryType">Delivery Method:</label>
+      <select name="deliveryType" id="deliveryType"">
+        <option value=" takeOut">Take Out</option>
+        <option value="delivery">Delivery (+$5)</option>
+      </select>
+    </form>
+  </div>
+  <div id="orderForm">
+    <h3>Select Your Pizza:</h3>
+    <form id="pizzaSelect">
+      <h4>Crust:</h4>
+      <div id="crustType">
+        <div>
+          <input type="radio" id="thin" value="thin">
+          <label for="thin">Thin Crust</label>
+        </div>
+        <div>
+          <input type="radio" id="classic" value="classic" checked="checked">
+          <label for="classic">Classic</label>
+        </div>
+        <div>
+          <input type="radio" id="deepDish" value="deepDish">
+          <label for="deepDish">Deep Dish</label>
+        </div>
+      </div>
+      <h4>Toppings:</h4>
+      <div id="toppingList">
+        <div>
+          <input type="checkbox" id="pepperoni" value="pepperoni">
+          <label for="pepperoni">Pepperoni</label>
+        </div>
+        <div>
+          <input type="checkbox" id="mushroom" value="mushroom">
+          <label for="mushroom">Mushroom</label>
+        </div>
+        <div>
+          <input type="checkbox" id="sausage" value="sausage">
+          <label for="sausage">Sausage</label>
+        </div>
+        <div>
+          <input type="checkbox" id="onion" value="onion">
+          <label for="onion">Onion</label>
+        </div>
+        <div>
+          <input type="checkbox" id="olives" value="olives">
+          <label for="olives">Black Olives</label>
+        </div>
+        <div>
+          <input type="checkbox" id="greenPepper" value="greenPepper">
+          <label for="greenPepper">Green Pepper</label>
+        </div>
+        <div>
+          <input type="checkbox" id="garlic" value="garlic">
+          <label for="garlic">Fresh Garlic</label>
+        </div>
+        <div>
+          <input type="checkbox" id="basil" value="basil">
+          <label for="basil">Basil</label>
+        </div>
+      </div>
+      <h4>Size:</h4>
+      <select name="pizzaSize" id="pizzaSize"">
+        <option value=" small">Small</option>
+        <option selected="selected" value="medium">Medium</option>
+        <option value="large">Large</option>
+        <option value="extra-large">Extra-Large</option>
+      </select>
+      <div>
+        <button type="submit">Add to Cart</button>
+      </div>
+    </form>
+  </div>
+  <div id="cart">
+    <h3>Your Cart:</h3>
+  </div>
 </body>
 
 </html>
