Updated stylesheet with hidden class

--- a/index.html
+++ b/index.html
@@ -9,92 +9,108 @@
 </head>
 
 <body>
-  <h1>Pizza Parlor</h1>
-  <h2>Pizza Order Form</h2>
-  <div id="orderInfo">
-    <form id="userInfo">
-      <label for="deliveryType">Delivery Method:</label>
-      <select name="deliveryType" id="deliveryType">
-        <option value=" takeOut">Take Out</option>
-        <option value="delivery">Delivery (+$5)</option>
-      </select>
-    </form>
-  </div>
-  <div id="orderForm">
-    <h3>Select Your Pizza:</h3>
-    <form id="pizzaSelect">
-      <h4>Crust:</h4>
-      <div id="crustType">
-        <div>
-          <input type="radio" id="thin" value="thin" name="crustType">
-          <label for="thin">Thin Crust</label>
-        </div>
-        <div>
-          <input type="radio" id="classic" value="classic" checked="checked" name="crustType">
-          <label for="classic">Classic</label>
-        </div>
-        <div>
-          <input type="radio" id="deepDish" value="deep dish" name="crustType">
-          <label for="deepDish">Deep Dish</label>
-        </div>
-      </div>
-      <h4>Toppings:</h4>
-      <div id="toppingList">
-        <div>
-          <input type="checkbox" id="pepperoni" value="pepperoni">
-          <label for="pepperoni">Pepperoni</label>
-        </div>
-        <div>
-          <input type="checkbox" id="mushroom" value="mushroom">
-          <label for="mushroom">Mushroom</label>
-        </div>
-        <div>
-          <input type="checkbox" id="sausage" value="sausage">
-          <label for="sausage">Sausage</label>
-        </div>
-        <div>
-          <input type="checkbox" id="onion" value="onion">
-          <label for="onion">Onion</label>
-        </div>
-        <div>
-          <input type="checkbox" id="olives" value="olives">
-          <label for="olives">Black Olives</label>
-        </div>
-        <div>
-          <input type="checkbox" id="greenPepper" value="green pepper">
-          <label for="greenPepper">Green Pepper</label>
-        </div>
-        <div>
-          <input type="checkbox" id="garlic" value="garlic">
-          <label for="garlic">Fresh Garlic</label>
-        </div>
-        <div>
-          <input type="checkbox" id="basil" value="basil">
-          <label for="basil">Basil</label>
-        </div>
-      </div>
-      <h4>Size:</h4>
-      <select name="pizzaSize" id="pizzaSize"">
-        <option value=" small">Small</option>
-        <option selected="selected" value="medium">Medium</option>
-        <option value="large">Large</option>
-        <option value="extra-large">Extra-Large</option>
-      </select>
-      <div>
-        <button type="submit">Add to Cart</button>
-      </div>
-    </form>
-  </div>
-  <div id="cart">
-    <h3>Your Cart:</h3>
-    <div id="cartContents">
-      <ol id="pizzaList"></ol>
+  <div class="container">
+    <div class="row">
+      <h1>Pizza Parlor</h1>
     </div>
-    <div id="deliveryFee"></div>
-    <h4>Order Total:</h4>
-    <div id="total"></div>
-    <button type="button" id="cartReset">Reset Cart</button>
+    <div class="row">
+      <div class="col-6">
+        <h2>Pizza Order Form:</h2>
+        <div id="orderInfo">
+          <form id="userInfo">
+            <h4>Delivery Method:</h4>
+            <select name="deliveryType" id="deliveryType">
+              <option value=" takeOut">Take Out</option>
+              <option value="delivery">Delivery (+$5)</option>
+            </select>
+          </form>
+          <br>
+        </div>
+        <div id="orderForm">
+          <form id="pizzaSelect">
+            <h4>Size:</h4>
+            <select name="pizzaSize" id="pizzaSize"">
+              <option value=" small">Small</option>
+              <option selected="selected" value="medium">Medium</option>
+              <option value="large">Large</option>
+              <option value="extra-large">Extra-Large</option>
+            </select>
+            <br><br>
+            <h4>Crust:</h4>
+            <div id="crustType">
+              <div>
+                <input type="radio" id="thin" value="thin" name="crustType">
+                <label for="thin">Thin Crust</label>
+              </div>
+              <div>
+                <input type="radio" id="classic" value="classic" checked="checked" name="crustType">
+                <label for="classic">Classic</label>
+              </div>
+              <div>
+                <input type="radio" id="deepDish" value="deep dish" name="crustType">
+                <label for="deepDish">Deep Dish</label>
+              </div>
+            </div>
+            <br>
+            <h4>Toppings:</h4>
+            <div id="toppingList">
+              <div>
+                <input type="checkbox" id="pepperoni" value="pepperoni">
+                <label for="pepperoni">Pepperoni</label>
+              </div>
+              <div>
+                <input type="checkbox" id="mushroom" value="mushroom">
+                <label for="mushroom">Mushroom</label>
+              </div>
+              <div>
+                <input type="checkbox" id="sausage" value="sausage">
+                <label for="sausage">Sausage</label>
+              </div>
+              <div>
+                <input type="checkbox" id="onion" value="onion">
+                <label for="onion">Onion</label>
+              </div>
+              <div>
+                <input type="checkbox" id="olives" value="olives">
+                <label for="olives">Black Olives</label>
+              </div>
+              <div>
+                <input type="checkbox" id="greenPepper" value="green pepper">
+                <label for="greenPepper">Green Pepper</label>
+              </div>
+              <div>
+                <input type="checkbox" id="garlic" value="garlic">
+                <label for="garlic">Fresh Garlic</label>
+              </div>
+              <div>
+                <input type="checkbox" id="basil" value="basil">
+                <label for="basil">Basil</label>
+              </div>
+            </div>
+            <br>
+            <div>
+              <button type="submit" class="btn btn-primary">Add to Cart</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="col-6">
+        <div id="cart" class="hidden">
+          <h3>Your Cart:</h3>
+          <div id="cartContents">
+            <ul id="pizzaList"></ul>
+          </div>
+          <div id="deliveryFee"></div>
+          <br>
+          <h4>Order Total:</h4>
+          <div id="total"></div>
+          <br>
+          <button type="button" id="cartReset" class="btn btn-warning">Reset Cart</button>
+        </div>
+      </div>
+    </div>
   </div>
+
 </body>
 
 </html>
