--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <div class="container">
-    <div class="row">
-      <h1>Pizza Parlor</h1>
+    <div class="row" id="header">
+      <h1 class="text-center">Pizza Parlor</h1>
     </div>
     <div class="row">
       <div class="col-6">
